WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
198222
REGRESSION (
r245715
?) [WK2] Layout Test http/wpt/cache-storage/cache-storage-networkprocess-crash.html is a flaky failure
https://bugs.webkit.org/show_bug.cgi?id=198222
Summary
REGRESSION (r245715?) [WK2] Layout Test http/wpt/cache-storage/cache-storage-...
Shawn Roberts
Reported
2019-05-24 11:31:39 PDT
The following layout test is flaky on Mac and iOS Simulator WK2 Release and Debug http/wpt/cache-storage/cache-storage-networkprocess-crash.html Probable cause: Most probably cause looks like
r245715
is causing the issue. Test is hitting a harness timeout Currently I cannot reproduce locally in iOS Simulator or Mojave WK2 Release Attempting in a few other configurations, and then will try with test lists from workers on runs. so far attempted: run-webkit-tests http/wpt/cache-storage/cache-storage-networkprocess-crash.html --iter 500 -f ditto -fg ditto --ios-simulator -f Flakiness Dashboard:
https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=http%2Fwpt%2Fcache-storage%2Fcache-storage-networkprocess-crash.html
Diff: --- /Volumes/Data/slave/ios-simulator-12-release-tests-wk2/build/layout-test-results/http/wpt/cache-storage/cache-storage-networkprocess-crash-expected.txt +++ /Volumes/Data/slave/ios-simulator-12-release-tests-wk2/build/layout-test-results/http/wpt/cache-storage/cache-storage-networkprocess-crash-actual.txt @@ -1,8 +1,5 @@ -CONSOLE MESSAGE: Cache API operation failed: Internal error -CONSOLE MESSAGE: Cache API operation failed: Internal error -CONSOLE MESSAGE: Cache API operation failed: Internal error -CONSOLE MESSAGE: Cache API operation failed: Internal error -CONSOLE MESSAGE: Cache API operation failed: Internal error -PASS Pending cache operation on network process crash +Harness Error (TIMEOUT), message = null +TIMEOUT Pending cache operation on network process crash Test timed out +
Attachments
Patch
(3.05 KB, patch)
2019-05-24 15:28 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews210 for win-future
(13.99 MB, application/zip)
2019-05-24 17:07 PDT
,
EWS Watchlist
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-05-24 11:33:43 PDT
<
rdar://problem/51114899
>
Truitt Savell
Comment 2
2019-05-24 11:50:01 PDT
I was able to reproduce just with: run-webkit-tests http/wpt/cache-storage/cache-storage-networkprocess-crash.html --iterations 100 -f
Shawn Roberts
Comment 3
2019-05-24 13:10:52 PDT
Not sure why Truitt can reproduce it, I cannot reproduce it with the test by itself on two computers ?? However I was able to run it with the test list and find a repro that works for me. Youenn if you cannot use the above repro's, then this worked for me locally 100% of the time with: run-webkit-tests http/tests/workers/service/serviceworkerclients-matchAll.https.html http/wpt/cache-storage/cache-storage-networkprocess-crash.html --child-process 1 It will fail test harness timeout, and then pass on retry.
youenn fablet
Comment 4
2019-05-24 15:28:16 PDT
Created
attachment 370596
[details]
Patch
EWS Watchlist
Comment 5
2019-05-24 17:07:23 PDT
Comment on
attachment 370596
[details]
Patch
Attachment 370596
[details]
did not pass win-ews (win): Output:
https://webkit-queues.webkit.org/results/12282798
New failing tests: js/dom/custom-constructors.html
EWS Watchlist
Comment 6
2019-05-24 17:07:26 PDT
Created
attachment 370610
[details]
Archive of layout-test-results from ews210 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews210 Port: win-future Platform: CYGWIN_NT-10.0-17763-3.0.5-338.x86_64-x86_64-64bit
WebKit Commit Bot
Comment 7
2019-05-24 18:39:25 PDT
Comment on
attachment 370596
[details]
Patch Clearing flags on attachment: 370596 Committed
r245767
: <
https://trac.webkit.org/changeset/245767
>
WebKit Commit Bot
Comment 8
2019-05-24 18:39:26 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug