REGRESSION (r245715?) [WK2] Layout Test http/wpt/cache-storage/cache-storage-networkprocess-crash.html is a flaky failure https://bugs.webkit.org/show_bug.cgi?id=198222 <rdar://problem/51114899>

Reviewed by Alex Christensen.

In case a connection gets closed, handle all of its async reply completion handlers.
This ensures they handlers are called in case the connection does not get destroyed until a much later stage.

* Platform/IPC/Connection.cpp:
(IPC::Connection::~Connection):
(IPC::Connection::connectionDidClose):
(IPC::addAsyncReplyHandler):
(IPC::clearAsyncReplyHandlers):
(IPC::CompletionHandler<void):


Canonical link: https://commits.webkit.org/212291@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@245767 268f45cc-cd09-0410-ab3c-d52691b4dbfc